--- a/index.html
+++ b/index.html
@@ -15,30 +15,16 @@
 				<div class="container has-text-centered">
 					<div class="columns is-vcentered">
 						<div class="column is-two-thirds is-centered has-nice-link">
-							<h1 class="title is-2" itemprop="name">Eivense</h1>
-              <br>
-							<h2 class="subtitle is-4" itemprop="description">My Personal Page <br>&amp;<br>Just For Fun </h2>
-							<p>Learning in Shanghai University.</p>
-							<br>
-							<p class="has-text-centered">
-								<a class="button is-large is-white" href="http://weibo.com/u/3020921227?refer_flag=1001030102_">
-									<span class="icon">
-										<i class="fa fa-pencil"></i>
-									</span>
-									<span>Weibo</span>
-								</a>
-								<a class="button is-large is-white" href="https://github.com/eivense">
-									<span class="icon">
-										<i class="fa fa-github"></i>
-									</span>
-									<span>Github</span>
-								</a>
-							</p>
+							<h1 class="title is-2" itemprop="name">
+								恭喜邱天顺利毕业
+							</h1>
+							<h2 class="subtitle is-4" itemprop="description">
+								邱老师永远滴神
+							</h2>
 						</div>
 					</div>
 				</div>
 			</div>
-
 
 		</section>
   </body>
