--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 								恭喜邱天顺利毕业
 							</h1>
 							<h2 class="subtitle is-4" itemprop="description">
-								邱老师永远滴神
+								邱老师永远滴神!
 							</h2>
 						</div>
 					</div>
